# crm_backend

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy_render.yml
src/: auth.py  config.py  database.py  main.py  models.py  schemas.py
src/routers/: auth.py  clients.py  content_items.py  debug.py  prospects.py  users.py
tests/: test_db_connection.py
